Fixes z-index for plusbutton dropdown

--- a/cdap-ui/app/cdap/components/DataPrep/TopPanel/TopPanel.scss
+++ b/cdap-ui/app/cdap/components/DataPrep/TopPanel/TopPanel.scss
@@ -111,7 +111,7 @@ $success_alert_bg_color: $brand-success;
       margin-right: 20px;
       align-items: center;
       justify-content: flex-end;
-      z-index: 2000;
+      z-index: 1061;
 
       .btn-primary {
         margin: 0 10px;
